tests/fixtures/invalid/import_cycle_b.ko
module cycle_b {
    import import_cycle_a

    meta {
        purpose: "Test import cycle detection (B -> A -> B)"
        version: "0.1.0"
    }

    fn helper() -> Int {
        return 1
    }
}
